--- a/biblio.bib
+++ b/biblio.bib
@@ -72,7 +72,7 @@
 
 @incollection{taylor2007triana,
   title={The triana workflow environment: Architecture and applications},
-  author={Taylor, Ian and Shields, Matthew and Wang, Ian and Harrison, Andrew},
+  author={Taylor, Ian and others},
   booktitle={Workflows for e-Science},
   pages={320--339},
   year={2007},
@@ -87,11 +87,10 @@
 }
 
 @INPROCEEDINGS{Plankensteiner2009, 
-author={Plankensteiner, K. and Prodan, R. and Fahringer, T.}, 
-booktitle={5th IEEE International Conference on e-Science (e-Science '09)}, 
+author={Plankensteiner, K. and others}, 
+booktitle={5th IEEE Inter. Conf. on e-Science}, 
 title={A New Fault Tolerance Heuristic for Scientific Workflows in Highly Distributed Environments Based on Resubmission Impact}, 
 year={2009}, 
-month={Dec}, 
 pages={313-320}, 
 }
 
@@ -111,11 +110,10 @@ pages={8},
 }
 
 @INPROCEEDINGS{1015660, 
-author={Junwei Cao and Jarvis, S.A. and Spooner, D.P. and Turner, J.D. and Kerbyson, D.J. and Nudd, G.R.}, 
-booktitle={IEEE International Parallel and Distributed Processing Symposium (IPDPS 2002)}, 
+author={Junwei Cao and others}, 
+booktitle={IEEE International Parallel and Distributed Processing Symposium}, 
 title={Performance prediction technology for agent-based resource management in grid environments}, 
 year={2002}, 
-month={April}, 
 pages={14}, 
 
 }
@@ -731,7 +729,7 @@ pages={86-93},
 	title={A Dynamic Job Grouping-Based Scheduling for Deploying Applications with Fine-Grained Tasks on Global Grids},
 	year={2005},
 	booktitle={Australasian workshop on Grid computing and e-research},
-	author={Nithiapidary Muthuvelu and Junyang Liu and Nay Lin Soe and Srikumar Venugopal and Anthony Sulistio and Rajkumar Buyya},	
+	author={Nithiapidary Muthuvelu and others},	
 },
 
 @inproceedings{Integration2012,
@@ -1161,16 +1159,7 @@ pages={389 -400},
 
 @article{Braun2001,
     author={Tracy D. Braun and
-               Howard Jay Siegel and
-               Noah Beck and
-               Ladislau B{\"o}l{\"o}ni and
-               Muthucumaru Maheswaran and
-               Albert I. Reuther and
-               James P. Robertson and
-               Mitchell D. Theys and
-               Bin Yao and
-               Debra A. Hensgen and
-               Richard F. Freund},
+               others},
     title={A Comparison of Eleven Static Heuristic for Mapping a Class of Independent Tasks onto Heterogeneous Distributed Computing Systems},
     journal={Journal of Parallel and Distributed Computing},
     volume={61},
@@ -2777,7 +2766,7 @@ ISSN={1045-9219},},
 },
 
 @article{Topcuoglu2002,
-    author = {Topcuoglu, H. and Hariri, S. and {Min-You}, Wu},
+    author = {Topcuoglu, H. and others},
     title = {Performance-effective and low-complexity task scheduling for heterogeneous computing},
     journal = {{IEEE} Transactions on Parallel and Distributed Systems},
     volume = {13},
